<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <!--Notifications-->
    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">Check the status</string>
    <string name="notification_channel_id">channelId</string>
    <string name="notification_channel_name">Channel for downloads</string>

    <!--App-->
    <string name="button_completed">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="radio_button_glide">Glide - Image Loading Library by BumpTech</string>
    <string name="radio_button_load_app">LoadApp - Current repository by Udacity</string>
    <string name="radio_button_retrofit">Retrofit - Type-safe HTTP client for android and Java by Square, Inc</string>
    <string name="radio_button_not_selected">Please select an option to start downloading</string>

    <!--Detail Activity-->
    <string name="detail_label_file_name">File name:</string>
    <string name="detail_label_status">Status:</string>
    <string name="detail_button">OK</string>
    <string name="detail_success">Success</string>
    <string name="detail_fail">Fail</string>

    <!--Content description-->
    <string name="image_cloud_download">Cloud download logo</string>
</resources>
